# NTU-114-2-PHYS8155-QAlgo

./: README.md
hw1/: hw1.ipynb  problem1.py  pyproject.toml  tutorial_expressivity_fourier_series.ipynb  tutorial_qaoa_inatro.ipynb
hw2/: hw2.ipynb  pyproject.toml  tutorial_qubo.ipynb
